package com.example.learn.design.pattern.han._02.UML类图._01依赖关系;

public class Department {
}
