package com.example.learn.design.pattern.han._02.UML类图._06组合关系.other;

public class Person {
    private IDCard card; //聚合关系
    private Head head = new Head(); //组合关系

}
