@startuml
'https://plantuml.com/class-diagram

class IDCard

class Person

class PersonDao

class Department

class PersonServiceBean{
    PersonDao personDao
    save(PersonDao personDao)
    IDCard getIdCard(Integer personId)
    modify()
}

IDCard <.. PersonServiceBean
Person <.. PersonServiceBean
PersonDao <.. PersonServiceBean
Department <.. PersonServiceBean

@enduml